feat: more swagger things
